--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     </style>
 </head>
 <body>
-    <h1>Anna & Petr</h1>
-    <img src="fotka.jpg" alt="Naše fotka">
+    <h1>Aneta & Matouš</h1>
     <div class="info">
-        <h2>15. června 2026</h2>
-        <p><strong>Místo:</strong> Kostel sv. Jana, Ostrava</p>
-        <p><strong>Čas:</strong> Obřad 14:00, hostina 16:00</p>
+        <h2>13. června 2026</h2>
+        <p><strong>Místo:</strong>Kunžak </p>
+        <p><strong>Čas:</strong> Obřad 12:30</p>
         <iframe src="https://www.google.com/maps/embed?pb=...vašemísto" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <p>RSVP: <a href="mailto:svatba@email.cz">Napište nám</a></p>
     </div>
