--- a/index.html
+++ b/index.html
@@ -3,22 +3,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naše svatba</title>
+    <title>Svatba Aneta & Matouš</title>
     <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; text-align: center; background: #f9f9f9; }
-        h1 { color: #d4a574; }
-        img { max-width: 100%; height: auto; border-radius: 10px; }
-        .info { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            color: #333;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 60px 40px;
+            border-radius: 24px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+            max-width: 500px;
+            width: 100%;
+            text-align: center;
+        }
+        h1 {
+            font-size: clamp(2.5rem, 6vw, 4rem);
+            background: linear-gradient(45deg, #667eea, #764ba2);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 20px;
+            font-weight: 300;
+            letter-spacing: -1px;
+        }
+        .names {
+            font-size: clamp(2rem, 5vw, 3.2rem);
+            color: #2c3e50;
+            font-weight: 400;
+            margin: 30px 0;
+            letter-spacing: 2px;
+        }
+        .details {
+            font-size: 1.4rem;
+            line-height: 1.8;
+            color: #555;
+            margin: 30px 0;
+            font-weight: 300;
+        }
+        .location {
+            font-size: 1.2rem;
+            font-weight: 500;
+            color: #2c3e50;
+            margin-top: 10px;
+        }
+        .rsvp-section {
+            margin-top: 50px;
+            padding-top: 40px;
+            border-top: 2px solid #e1e8ed;
+        }
+        .rsvp-title {
+            font-size: 1.5rem;
+            color: #2c3e50;
+            margin-bottom: 25px;
+            font-weight: 400;
+        }
+        .rsvp-form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+        .rsvp-form input, .rsvp-form select {
+            padding: 15px 20px;
+            border: 2px solid #e1e8ed;
+            border-radius: 12px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            background: #f8f9fa;
+        }
+        .rsvp-form input:focus, .rsvp-form select:focus {
+            outline: none;
+            border-color: #667eea;
+            background: white;
+            transform: translateY(-2px);
+        }
+        .rsvp-btn {
+            padding: 18px;
+            background: linear-gradient(45deg, #667eea, #764ba2);
+            color: white;
+            border: none;
+            border-radius: 12px;
+            font-size: 1.1rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+        }
+        .rsvp-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.4);
+        }
+        .success-message {
+            display: none;
+            background: #d4edda;
+            color: #155724;
+            padding: 15px;
+            border-radius: 12px;
+            margin-top: 20px;
+        }
+        @media (max-width: 480px) {
+            .container {
+                padding: 40px 25px;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Aneta & Matouš</h1>
-    <div class="info">
-        <h2>13. června 2026</h2>
-        <p><strong>Místo:</strong>Kunžak </p>
-        <p><strong>Čas:</strong> Obřad 12:30</p>
+    <div class="container">
+        <h1>Svatba byla a bude</h1>
+        <div class="names">Aneta & Matouš</div>
+        <div class="details">
+            13. Června 2026<br>
+            12:30
+        </div>
+        <div class="location">Kunžak 53, Kunžak</div>
         
-        <p>RSVP: <a href="mailto:svatba@email.cz">Napište nám</a></p>
+        <div class="rsvp-section">
+            <h2 class="rsvp-title">Potvrď účast</h2>
+            <form class="rsvp-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <input type="text" name="name" placeholder="Jméno" required>
+                <input type="email" name="email" placeholder="Email (volitelné)">
+                <select name="attendance" required>
+                    <option value="">Budu přítomen...</option>
+                    <option value="yes">Ano, přijedu</option>
+                    <option value="no">Bohužel nemohu přijet</option>
+                </select>
+                <input type="number" name="guests" placeholder="Počet osob (včetně tebe)" min="1" max="10" required>
+                <button type="submit" class="rsvp-btn">Odeslat RSVP</button>
+            </form>
+            <div class="success-message" id="success">Děkujeme za potvrzení! Vidíme se na svatbě! 🎉</div>
+        </div>
     </div>
+
+    <script>
+        const form = document.querySelector('.rsvp-form');
+        const successMsg = document.getElementById('success');
+        
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            // Nahraď YOUR_FORM_ID svým skutečným Formspree ID
+            const formData = new FormData(form);
+            fetch(form.action, {
+                method: 'POST',
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).then(response => {
+                if (response.ok) {
+                    form.style.display = 'none';
+                    successMsg.style.display = 'block';
+                }
+            }).catch(error => {
+                alert('Chyba při odesílání. Zkus to znovu.');
+            });
+        });
+    </script>
 </body>
 </html>
