--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
         
         <div class="rsvp-section">
             <h2 class="rsvp-title">Potvrď účast</h2>
-            <form class="rsvp-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+            <form class="rsvp-form" action="https://formspree.io/f/xlgwgjob" method="POST">
                 <input type="text" name="name" placeholder="Jméno" required>
-                <input type="email" name="email" placeholder="Email (volitelné)">
                 <select name="attendance" required>
                     <option value="">Budu přítomen...</option>
                     <option value="yes">Ano, přijedu</option>
