--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
     <div class="main-container">
         <!-- Jednoduché info okénko -->
         <div class="info-box">
-            <h2 class="info-title">Svatba byla a bude</h2>
+            <h2 class="info-title">Svatba <br>
+                byla a bude</h2>
             <div class="info-details">
                 Aneta & Matouš<br><br>
-                Sobota 13. června 2026<br>
+                sobota 13. června 2026<br>
                 12:30<br><br>
                 Kunžak 53, Kunžak
             </div>
