--- a/index.html
+++ b/index.html
@@ -145,14 +145,11 @@
         <div class="info-box">
             <h2 class="info-title">Svatba byla a bude</h2>
             <div class="info-details">
-                Aneta & Matouš<br><br>
-                Sobota 13. června 2026<br>
-                12:30<br><br>
-                Kunžak 53, Kunžak
+                Tady budou bogo zajimavé veci, co napise Batoček :) <br><br>
+                
             </div>
         </div>
         
-        <!-- RSVP s plně funkčním formulářem -->
         <div class="rsvp-container">
             <h2 class="rsvp-title">Potvrď účast</h2>
             <form class="rsvp-form" action="https://formspree.io/f/xlgwgjob" method="POST">
@@ -163,7 +160,7 @@
                     <option value="no">Bohužel nemohu</option>
                 </select>
                 <input type="number" name="guests" placeholder="Počet osob" min="1" max="10" required>
-                <button type="submit" class="rsvp-btn">Odeslat RSVP</button>
+                <button type="submit" class="rsvp-btn">Odeslat</button>
             </form>
             <div class="success-message" id="success">Děkujeme za potvrzení! Vidíme se na svatbě! 🎉</div>
         </div>
