--- a/index.html
+++ b/index.html
@@ -153,9 +153,18 @@
     <div class="main-container">
         <!-- Info okénko -->
         <div class="info-box">
-            <h2 class="info-title">Svatba byla a bude</h2>
+            <h2 class="info-title">Informace</h2>
             <div class="info-details">
                 Tady budou bogo zajimavé veci, co napise Batoček :) <br><br>
+                Místo: Kunžak u Jindřichova Hradce, areal: www.svatbanakopci.cz <br>
+                Kdy: svatba je v sobotu 13.6.2026  <br>
+                Program: 
+                    pátek - grilovačka, posezení, kytary
+                    sobota - dáme už nacvičený obřad
+                    neděle - 
+                Ubytování:
+                    na máste je cca 97 mást na spaní v chatkách 
+                
             </div>
         </div>
         
