--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
             <div class="info-details">
                 Tady budou bogo zajimavé veci, co napise Batoček :) <br><br>
                 Místo: Kunžak u Jindřichova Hradce, areal: www.svatbanakopci.cz <br>
-                Kdy: svatba je v sobotu 13.6.2026  <br>
-                Program: 
-                    pátek - grilovačka, posezení, kytary
-                    sobota - dáme už nacvičený obřad
-                    neděle - 
-                Ubytování:
+                Kdy: svatba je v sobotu 13.6.2026  <br><br>
+                Program: <br>
+                    pátek - grilovačka, posezení, kytary<br>
+                    sobota - dáme už nacvičený obřad<br>
+                    neděle - <br><br>
+                Ubytování:<br>
                     na máste je cca 97 mást na spaní v chatkách 
                 
             </div>
