--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Playfair Display', Georgia, serif !important;
         }
         body {
-            font-family: 'Playfair Display', 'Georgia', serif;
             background: #f8f7f4;
             min-height: 100vh;
             padding: 20px;
@@ -106,13 +106,11 @@
             border: 2px solid #e1e8ed;
             border-radius: 12px;
             font-size: 1.1rem;
-            font-family: 'Playfair Display', serif;
             background: #f8f9fa;
             transition: all 0.3s ease;
         }
         
         .rsvp-form input::placeholder {
-            font-family: 'Playfair Display', serif; 
             opacity: 0.7;
             color: #666;
         }
@@ -131,8 +129,7 @@
             border: none;
             border-radius: 12px;
             font-size: 1.2rem;
-            font-weight: 400; 
-            font-family: 'Playfair Display', serif;
+            font-weight: 400;
             cursor: pointer;
             transition: all 0.3s ease;
             letter-spacing: 0.5px;
@@ -152,7 +149,6 @@
             margin-top: 25px;
             text-align: center;
             font-weight: 400;
-            font-family: 'Playfair Display', serif;
             border: 1px solid #c3e6cb;
             line-height: 1.6;
         }
@@ -201,7 +197,7 @@
                 <p>moc rádi bychom Vás pozvali na naši svatbu! Vzhledem k tomu, že v pozvánce samotné toho moc nevyčtete, zkusíme Vám info napsat tady.</p>
                 
                 <div class="key-info">
-                    <strong>Nejdůležitější:</strong> Zablokujte si datum <strong>12.-14.6.2026</strong><br>
+                    <strong>Nejdůležitější zablokujte si datum:</strong> 12.-14.6.2026<br>
                     <strong>Místo:</strong> <a href="https://www.svatbanakopci.cz" style="color: #3498db;">Kunžak u Jindřichova Hradce</a>
                 </div>
 
