--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                
 
                 <h3 class="info-subtitle">Ubytování</h3>
-                <p>Areál má cca <strong>100 postelí</strong>. Uložíme veškeré dospělé hosty. Děti rádi uvítáme - menší s rodiči, větší ve spacácích. Připravíme i zábavný koutek.</p>
-                Co se týče ubytka, areál má cca 100 postelí. Počítáme, že uložíme veškeré dospělé. Co se týče dětí, počítáme, že menší se vejdou s rodiči na manželskou postel, větší si mohou užít dobrodružství formou spacáku a karimatky v chatce rodičů nebo třeba na parketu. Celkově děti na svatbě rádi uvítáme, připravíme pro ně i nějaký zábavný koutek, ale možná ještě radši budeme, pokud dorazíte sami a budete v klidu a pohodě pařit do rána a mít na starost pouze vlastní pohodu. 
+                <p> 
+                Co se týče ubytka, areál má cca 100 postelí. Počítáme, že uložíme veškeré dospělé. Co se týče dětí, počítáme, že menší se vejdou s rodiči na manželskou postel, větší si mohou užít dobrodružství formou spacáku a karimatky v chatce rodičů nebo třeba na parketu. Celkově děti na svatbě rádi uvítáme, připravíme pro ně i nějaký zábavný koutek, ale možná ještě radši budeme, pokud dorazíte sami a budete v klidu a pohodě pařit do rána a mít na starost pouze vlastní pohodu.</p> 
                 <br>
                 <p> S tím souvisí, že ty počty ale budeme potřebovat vědět. Níže prosíme o vyplnění dotazníku, zda se zúčastníte celý víkend, nebo jen sobotu (variantu vůbec ani nechceme slyšet). Poté taky, zda s dětma nebo bez.  </p>
                 <br>
