--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Playfair Display', Georgia, serif !important;
+            font-family: 'Playfair Display'
         }
         body {
             background: #f8f7f4;
@@ -161,9 +161,9 @@
         ul li {
             font-size: 1.15rem;
             color: #555;
-            padding: 12px 0;
+            padding: 8px 0 8px 35px;  
             position: relative;
-            padding-left: 25px;
+            line-height: 1.4;
         }
         
         ul li:before {
