--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <p> 
                 Nejdůležitější je, abyste si zablokovali <strong> datum 12. - 14. 6. 2026 </strong>. <br>
                 Samotná svatba je v sobotu 13.6.2026, ale akce je od pátku do neděle. <br>
-                    <strong>Místo </strong> <a href="https://www.svatbanakopci.cz" style="color: #3498db;">Kunžak u Jindřichova Hradce</a>
+                    A bude se konat v <a href="https://www.svatbanakopci.cz" style="color: #3498db;">Kunžak u Jindřichova Hradce</a>
                     <br>
                    </p>
 
