--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
                    </p>
 
                 <h3 class="info-subtitle">Harmonogram</h3>
-                <p>PÁTEK </p>
+                <p>pátek </p>
                     <ul>
                     <li>příjezd od 16:00</li>
                     <li>grilovačka, posezení, kytary.. </li> <br>
                     </ul>
                 
-                <p>SOBOTA</p>
+                <p>sobota</p>
                 <ul>
                     <li>Nutno dorazit nejdéle: 12:00</li>
                     <li>Obřad: 12:30</li>
