--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                 <h3 class="info-subtitle">Harmonogram</h3>
                 <p>pátek </p>
                     <ul>
-                    <li>příjezd od 16:00</li>
-                    <li>grilovačka, posezení, kytary.. </li> <br>
+                    příjezd od 16:00 <br>
+                    grilovačka, posezení, kytary.. <br>
                     </ul>
                 
                 <p>sobota</p>
