--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
                 <p> 
                 Nejdůležitější je, abyste si zablokovali <strong> datum 12. - 14. 6. 2026 </strong>. <br>
                 Samotná svatba je v sobotu 13.6.2026, ale akce je od pátku do neděle. <br>
-                    A bude se konat v <a href="https://www.svatbanakopci.cz" style="color: #3498db;">Kunžak u Jindřichova Hradce</a>
+                    A bude se na vás tešit v <a href="https://www.svatbanakopci.cz" style="color: #3498db;">Kunžak u Jindřichova Hradce</a>
                     <br>
                    </p>
 
                 <h3 class="info-subtitle">Harmonogram</h3>
-                <p>pátek </p>
+                pátek
                     <ul>
                     příjezd od 16:00 <br>
                     grilovačka, posezení, kytary.. <br>
