--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <p>sobota
                 <ul>
                     <li>nutno dorazit nejdéle do 12:00</li>
-                    <li>12:30 obřad</li>
+                    <li><strong> 12:30 obřad </strong> </li>
                     <li>13:30 přípitek, oběd</li>
                     <li>14:00 - 17:00 kafe stánek</li>
                     <li>od 17:00 kapela</li>
