--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             padding: 8px 0 8px 35px;  
             position: relative;
             line-height: 1.4;
+            margin-bottom: 12px ;
         }
         
         ul li:before {
@@ -173,6 +174,7 @@
             font-weight: bold;
             position: absolute;
             left: 0;
+             margin-bottom: 12px  ;
         }
         
         @media (max-width: 600px) {
