--- a/index.html
+++ b/index.html
@@ -209,15 +209,14 @@
               
 
                 <h3 class="info-subtitle">Harmonogram</h3>
-                <h4 class="info-subtitle">pátek</h4>
-                <p> <strong>pátek </strong>
-                    <ul>
+                <strong>pátek </strong>
+                  <p>   <ul>
                    <li> příjezd od 16:00 <br></li>
                    <li> grilovačka, posezení, kytary.. <br></li>
                     </ul>
                 </p>
                 
-                <p>sobota
+                <p>  <strong> sobota  </strong>
                 <ul>
                     <li>nutno dorazit nejdéle do 12:00</li>
                     <li><strong> 12:30 obřad </strong> </li>
@@ -235,7 +234,7 @@
                 <p> 
                 Co se týče ubytka, areál má cca 100 postelí. Počítáme, že uložíme veškeré dospělé. Co se týče dětí, počítáme, že menší se vejdou s rodiči na manželskou postel, větší si mohou užít dobrodružství formou spacáku a karimatky v chatce rodičů nebo třeba na parketu. Celkově děti na svatbě rádi uvítáme, ale možná ještě radši budeme, pokud dorazíte sami a budete v klidu a pohodě pařit do rána a mít na starost pouze o vlastní pohodu.</p> 
                 <br>
-                <p> Abychom všechny správně uložili,  <strong>prosíme o vyplnění dotazníku </strong>, zda se zúčastníte celý víkend, nebo jen sobotu (variantu vůbec ani nechceme slyšet). Poté taky, zda s dětma nebo bez.  </p>
+                <p> Abychom všechny správně uložili,  prosíme o vyplnění dotazníku, zda se zúčastníte celý víkend, nebo jen sobotu (variantu vůbec ani nechceme slyšet). Poté taky, zda s dětma nebo bez.  </p>
                 <br>
                 <h3 class="info-subtitle">Dress code</h3>
                 <p>Co se týče dress code, moc si s tím nelamte hlavu. Počítáme se slušnějším oblečením, jako pomoc můžete vzít, že ženich půjde v obleku, nevěsta ve svatebních šatech, ale žádné drama z toho dělat nebudeme. </p>
