--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         .highlight {
             font-weight: 500;
-            color: #2c3e50;
+            color: #1f2e3a;
         }
         
         .key-info {
